5.4_wikipedia_with_init_and_sidecar/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wikipedia-server-svc
spec:
  type: ClusterIP
  selector:
    app: wikipedia-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
