5.4_wikipedia_with_init_and_sidecar/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wikipedia-server-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wikipedia-server-svc
                port:
                  number: 80
